# blueroom

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  Justfile  Makefile  blueroom.py  index.py  models.py  post_process.py  process.py  pyproject.toml  renovate.json  sent.py  test_post_process.py  test_process.py  validator.py
.github/workflows/: pages.yml
__snapshots__/: test_post_process.ambr  test_process.ambr
output/: index.html
ref/: DataApiService.java
