[project]
name = "blueroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icalendar>=6.1.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "scrapy>=2.12.0",
]

[dependency-groups]
dev = [
    "pdbpp>=0.10.3",
    "pudb>=2024.1.3",
    "pyright>=1.1.392.post0",
    "ruff>=0.9.3",
]

[tool.ruff.lint]
select = ['F', 'I']
