[project]
name = "blueroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "icalendar>=6.1.1",
    "jinja2>=3.1.5",
    "python-dateutil>=2.9.0.post0",
    "rich>=13.9.4",
    "scrapy>=2.12.0",
    "tqdm>=4.67.1",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "pdbpp>=0.10.3",
    "pre-commit>=4.1.0",
    "pudb>=2024.1.3",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-sugar>=1.0.0",
    "syrupy>=4.8.1",
]

[tool.ruff.lint]
select = ['F', 'I', 'ANN']
